# rq2_mttu

./: Cargo.toml  README.md  import.sql  method.tex  plot_lag_distribution.py  results.tex  rustsec_rqx2_constraint_breakdown.csv  rustsec_rqx2_propagation_summary.txt  rustsec_rqx2_report.md  rustsec_rqx2_strict_summary.csv
analysis/prop_repair_multi_hop/: README.md
analysis/prop_repair_search/: METHODOLOGY.md  README.md  run_analysis.py
analysis/prop_repair_search_multi/: METHODOLOGY.md  README.md
cache/prop_search/commit_prs/: Nemo157_cargo-lichking_507ca95d49762b52168804d0b4aee363de81cea9.json  danielpclark_abrute_29d40fb0106e7f7c5975d1ef61f3b0924037b5f5.json  maidsafe_crust_9af92eaefa873761230c7d98b4c4adc74bd52d96.json  maidsafe_maidsafe_utilities_4a360a2f5ac160e50daece8042dd0b05a7c40933.json  maidsafe_secure_serialisation_4f0278f354856ff84007da15c1dc10252a16ce1e.json  nathansizemore_simple-stream_84d7b2f33d439c8c818f0255ad03668a5038f502.json  openrr_urdf-viz_322cf923f7171392ebbeebd51787d4b10e2774be.json  (+2 more)
outputs/constraint/: rustsec_rqx2_constraint_summary.txt
outputs/pr_cache/: crates-pro_crates-pro_pulls_51.json
outputs/pr_repair_hop1/: hop1_repair_analysis_report.md  repair_pr_results.csv
outputs/propagation/: propagation_events_raw.csv
outputs/propagation_hop1/: rqx2_rustsec_batch_hop1.console.txt  rustsec_rqx2_propagation_summary_hop1.txt
outputs/reports/: FINAL_REPORT.md  rustsec_rqx2_report.md
src/: database.rs
tools/: generate_final_report.py  plot_lag_distribution.py  render_summary_table.py
tools/pr/: fetch_pr_data.py
(+134754 files in other folders)
